--- a/front-end/.eslintrc.json
+++ b/front-end/.eslintrc.json
@@ -11,7 +11,8 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "next/core-web-vitals"
   ],
   "plugins": [
     "@typescript-eslint",
